--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -79,7 +79,7 @@
 
 .showcase-img {
     position: absolute;
-    bottom: -20vh;
+    bottom: -25vh;
     right: 20vw;
     z-index: 0;
 }
@@ -89,7 +89,7 @@
 .cta{
     height: auto;
     min-height: 100%;
-    background: url("../images/General/Bg-web.png");
+    background: url("../images/WebHeroBg.png");
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
