--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -41,17 +41,61 @@ html,body{
 }
 
 /* Footer */
+footer{
+    background-color: #1c1c1c99;
+}
 #footerLink{
     width:100%;
     justify-content: center;
 }
-#footerLink ul{
+footer ul{
     list-style: none;
 }
-#footerLink ul li{
+footer ul li{
     float: left;
     margin:20px 50px;
 }
+
+.socialLinks{
+    padding:3%;
+    border-radius: 50%;
+    border: solid 2px transparent;
+    color:white !important;
+}
+
+.socialLinks:hover, footer a:hover{
+    color: var(--dark-green) !important;
+}
+
+@media(max-width: 680px){
+    #footerLink ul li{
+        float: none;
+        margin-left:0;
+        margin-right:0;
+    }
+}
+
+@media(max-width:424px){
+    #footerContact{
+        flex-direction: column;
+    }
+
+    #socialLinks {
+        width:100%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    #socialLinks li{
+        margin:5%;
+    }
+    #footerContact>*{
+        margin-top:5px;
+    }
+}
+/* Our App */
+
 .landing-image{
     flex : 1;
     display : flex;
@@ -101,6 +145,10 @@ html,body{
     background: linear-gradient(133deg, rgba(53,231,127,1) 0%, rgba(17,153,142,1) 100%);
 }
 
+.icon-bg{
+    background: rgb(53,231,127);
+    background: linear-gradient(133deg, rgba(53,231,127,1) 0%, rgba(17,153,142,1) 100%);
+}
   
 .blob img{
     position: absolute;
@@ -189,6 +237,14 @@ html,body{
 .showcase-img {
     width: 80%;
     z-index: 0;
+}
+
+.web-showcase{
+    z-index: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: -5%;
 }
 
 /* cta section */
