--- a/assets/stylesheet/utilities.css
+++ b/assets/stylesheet/utilities.css
@@ -47,6 +47,18 @@ i{
   color: #1c1c1c !important;
 }
 
+footer a{
+  color:white !important;
+  text-decoration: none;
+}
+
+footer{
+  color:white;
+}
+a:hover{
+  text-decoration: none;
+}
+
 .icon-bg{
   padding:5%;
   border-radius:50%;
