--- a/assets/stylesheet/utilities.css
+++ b/assets/stylesheet/utilities.css
@@ -43,11 +43,22 @@ body{
   background-color: transparent !important;
 }
 
+.navbar-dark .navbar-toggler {
+  border: none !important;
+    border-color: none !important;
+}
+
 .icon-bg{
   padding:5%;
   border-radius:50%;
   background: linear-gradient(135deg, #35E77F 14.3%, #11998E 85.52%);
   color:white;
+}
+.icon-color{
+    background: linear-gradient(90deg, var(--light-green), var(--dark-green));
+    -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+  cursor: pointer;
 }
 
 .full-screen{
@@ -65,7 +76,7 @@ body{
 .head2 {
   font-size: 36px;
   font-weight: 700;
-  line-height: 64px;
+  line-height: 56px;
   letter-spacing: 0em;
   color: #fdfdfd;
 }
