--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,27 +1,25 @@
-:root {
-    --light-green: #35e77f;
-    --dark-green: #11998e;
-  }
 
-  
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
 }
 
+:root {
+    --light-green: #35e77f;
+    --dark-green: #11998e;
+  }
 html,body{
     height: 100vh;
     width:100vw;
-    overflow-x:hidden;
-    font-family: 'Poppins' serif;
+    /* overflow-x: hidden; */
     color:#FFFFFF;
     background-color: #1c1c1c;
 }
 
 ::-webkit-scrollbar{
     width:3px;
-    color: var(--dark-green)
+    color: var(--dark-green);
 }
 
 ::-webkit-scrollbar-thumb{
@@ -40,60 +38,6 @@ html,body{
     background-size: cover;
 }
 
-/* Footer */
-footer{
-    background-color: #1c1c1c99;
-}
-#footerLink{
-    width:100%;
-    justify-content: center;
-}
-footer ul{
-    list-style: none;
-}
-footer ul li{
-    float: left;
-    margin:20px 50px;
-}
-
-.socialLinks{
-    padding:3%;
-    border-radius: 50%;
-    border: solid 2px transparent;
-    color:white !important;
-}
-
-.socialLinks:hover, footer a:hover{
-    color: var(--dark-green) !important;
-}
-
-@media(max-width: 680px){
-    #footerLink ul li{
-        float: none;
-        margin-left:0;
-        margin-right:0;
-    }
-}
-
-@media(max-width:424px){
-    #footerContact{
-        flex-direction: column;
-    }
-
-    #socialLinks {
-        width:100%;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-    }
-
-    #socialLinks li{
-        margin:5%;
-    }
-    #footerContact>*{
-        margin-top:5px;
-    }
-}
 /* Our App */
 
 .landing-image{
@@ -234,12 +178,6 @@ footer ul li{
     flex : 1;
 }
 
-/* carousel */
-
-/* .carousel {
-    height: 40vh;
-} */
-
 /* app showcase section */
 
 .app-showcase{
@@ -274,7 +212,7 @@ footer ul li{
 
 .cta{
     height: auto;
-    min-height: 100%;
+    /* min-height: 100%; */
     background: url("../images/WebHeroBg.png");
     background-position: center;
     background-attachment: fixed;
@@ -284,6 +222,8 @@ footer ul li{
 .cta .para1{
     width: 50%;
 }
+
+
 
 /* Media Queries */
 
@@ -339,7 +279,8 @@ footer ul li{
         width: 90%;
     }
 }
-  
+
+
 @media (max-width:576px){
     .landing-text{
         flex : 1;
@@ -354,6 +295,6 @@ footer ul li{
         display: block;
     }
 }
-@media (min-width:576px){}
+
   
   
