--- a/assets/stylesheet/about.css
+++ b/assets/stylesheet/about.css
@@ -3,11 +3,12 @@ html {
 }
 
 .landing {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background: url("../images/AboutHeroBg.png");
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 #landingDiv {
