--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,300 +1,382 @@
-
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --light-green: #35e77f;
-    --dark-green: #11998e;
-  }
-html,body{
-    height: 100vh;
-    width:100vw;
-    /* overflow-x: hidden; */
-    color:#FFFFFF;
-    background-color: #1c1c1c;
+  --light-green: #35e77f;
+  --dark-green: #11998e;
+}
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  /* overflow-x: hidden; */
+  color: #ffffff;
+  background-color: #1c1c1c;
 }
 
-::-webkit-scrollbar{
-    width:3px;
-    color: var(--dark-green);
+::-webkit-scrollbar {
+  width: 3px;
+  color: var(--dark-green);
 }
 
-::-webkit-scrollbar-thumb{
-    width:3px;
-    color: #11998e;
-    background-color: #11998e;
+::-webkit-scrollbar-thumb {
+  width: 3px;
+  color: #11998e;
+  background-color: #11998e;
 }
 
-.landing{
-    height: auto;
-    min-height: 100vh;
-    background: url("../images/General/Bg-app.png");
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+.landing {
+  height: auto;
+  min-height: 100vh;
+  background: url("../images/General/Bg-app.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.weblanding {
+  height: auto;
+  min-height: 100vh;
+  background: url("../images/General/WebHeroBg.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Our App */
 
-.landing-image{
-    flex : 1;
-    display : flex;
-    justify-content: center;
-    align-items: center;
-    height : 80vh;
+.landing-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
-.landing-image img{
-    width: 300px;
+.landing-image img {
+  width: 300px;
 }
 
-.landing-text{
-    flex : 1;
-    padding: 2rem;
+.landing-text {
+  flex: 1;
+  padding: 2rem;
 }
 
 /* features section  */
 
 .features {
-    height: auto;
-    min-height: 100vh;
+  height: auto;
+  min-height: 100vh;
 }
 
-.feature-text-1{
-    flex : 1;
+.feature-text-1 {
+  flex: 1;
 }
-.feature-image{
-    flex : 2;
-    min-height: 80vh;
-    height: auto;
-    display: flex;
-    align-items:center;
-    justify-content: center;
+.feature-image {
+  flex: 2;
+  min-height: 80vh;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.feature-text-2{
-    flex : 1;
+.feature-text-2 {
+  flex: 1;
 }
-.features i{
-    font-size: 36px;
+.features i {
+  font-size: 36px;
 }
 .feature-alt {
-    display: none;
+  display: none;
 }
 .blob {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50vh;
-    width: 50vh;
-    border-radius: 50%;
-    background: rgb(53,231,127);
-    background: linear-gradient(133deg, rgba(53,231,127,1) 0%, rgba(17,153,142,1) 100%);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  width: 50vh;
+  border-radius: 50%;
+  background: rgb(53, 231, 127);
+  background: linear-gradient(
+    133deg,
+    rgba(53, 231, 127, 1) 0%,
+    rgba(17, 153, 142, 1) 100%
+  );
 }
 
-.icon-bg{
-    background: rgb(53,231,127);
-    background: linear-gradient(133deg, rgba(53,231,127,1) 0%, rgba(17,153,142,1) 100%);
+.icon-bg {
+  background: rgb(53, 231, 127);
+  background: linear-gradient(
+    133deg,
+    rgba(53, 231, 127, 1) 0%,
+    rgba(17, 153, 142, 1) 100%
+  );
 }
-  
-.blob img{
-    position: absolute;
-    width : 70%;
-    margin : auto;
+
+.blob img {
+  position: absolute;
+  width: 70%;
+  margin: auto;
 }
-  
 
 /* scroll section */
 
-.scroll-showcase .splide-alt{
-    display: none !important;
+.scroll-showcase .splide-alt {
+  display: none !important;
 }
 
 .scroll-showcase {
-    height : auto;
-    min-height: 100vh;
+  height: auto;
+  min-height: 100vh;
 }
 
 .text {
-    flex : 1;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+  flex: 1;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
-.showcase-2 .image{
-    flex : 2;
+.showcase-2 .image {
+  flex: 2;
 }
-.splide-alt .showcase-2 .image{
-    flex : 1;
+.splide-alt .showcase-2 .image {
+  flex: 1;
 }
-.text-1, .text-2 {
-    flex : 1;
-    height: 100%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
+.text-1,
+.text-2 {
+  flex: 1;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 .text-2 {
-    flex : 1;
-    height: 100%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  flex: 1;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
-.text-2 img{
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
-    border : 1px solid var(--dark-green);
-    object-fit: cover;
+.text-2 img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  border: 1px solid var(--dark-green);
+  object-fit: cover;
 }
 
 .scroll-showcase ul {
-    list-style: none;
-    margin: 0;
-    padding : 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .scroll-showcase li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
-.showcase-1 i, .showcase-2 i {
-    font-size: 22px !important;
-    margin: 0 16px 0 0;
-    background: linear-gradient(90deg, var(--light-green), var(--dark-green));
-    -webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+.showcase-1 i,
+.showcase-2 i {
+  font-size: 22px !important;
+  margin: 0 16px 0 0;
+  background: linear-gradient(90deg, var(--light-green), var(--dark-green));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .showcase-3 i {
-    font-size: 40px;
+  font-size: 40px;
 }
 
-.image { 
-    flex : 1;
+.image {
+  flex: 1;
 }
 
 /* app showcase section */
 
-.app-showcase{
-    height: auto;
-    z-index: 1;
-    overflow-y: hidden;
-    background: rgb(22,22,22);
-    background: linear-gradient(0deg, rgba(22,22,22,1) 0%, rgba(34,34,34,1) 100%);
+.app-showcase {
+  height: auto;
+  z-index: 1;
+  overflow-y: hidden;
+  background: rgb(22, 22, 22);
+  background: linear-gradient(
+    0deg,
+    rgba(22, 22, 22, 1) 0%,
+    rgba(34, 34, 34, 1) 100%
+  );
 }
 
 .showcase {
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: -15%;
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -15%;
 }
 .showcase-img {
-    width: 80%;
-    z-index: 0;
+  width: 80%;
+  z-index: 0;
 }
 
-.web-showcase{
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: -5%;
+.web-showcase {
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -5%;
 }
 
+@media (max-width: 770px) {
+  #webPanelDiv {
+    flex-direction: column;
+  }
+}
 /* cta section */
 
-.cta{
-    height: auto;
-    /* min-height: 100%; */
-    background: url("../images/WebHeroBg.png");
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+.cta {
+  height: auto;
+  /* min-height: 100%; */
+  background: url("../images/General/WebHeroBg.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.cta .para1{
-    width: 50%;
+.cta .para1 {
+  width: 50%;
 }
-
-
+.webcta {
+  height: auto;
+  /* min-height: 100%; */
+  background: url("../images/General/Bg-app.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.webcta .para1 {
+  width: 50%;
+}
 
 /* Media Queries */
 
 /* Devices Ranging From 992px to 768 px */
-@media (max-width:992px){
-    .landing-image img{
-        width: 260px;
-    }
-    .blob {
-        height: 40vh;
-        width: 40vh;
-    }
-    
-    .scroll-showcase .splide{
-        display: none !important;
-    }
-    .scroll-showcase .splide-alt{
-        display: block !important;
-    }
-    .scroll-showcase .splide-alt img{
-        width: 250px;
-    }
+@media (max-width: 992px) {
+  .landing-image img {
+    width: 260px;
+  }
+  .blob {
+    height: 40vh;
+    width: 40vh;
+  }
 
-}
-  
-@media (max-width:768px){
-    .landing-text{
-        flex : 1;
-    }
-    .landing-image{
-        align-items: flex-start;
-    }
-    .cta .para1{
-        width: 75%;
-    }
-    .landing-image img{
-        width: 240px;
-    }
-    .feature-item p{
-        display: none;
-    }
-    .scroll-showcase .splide-alt img{
-        width: 220px;
-    }
-    .splide-alt .showcase-1,
-    .splide-alt .showcase-3{
-        flex-direction: column !important;
-    }
-    .splide-alt .showcase-2{
-        flex-direction: column-reverse !important;
-    }
-    .showcase-img {
-        width: 90%;
-    }
+  .scroll-showcase .splide {
+    display: none !important;
+  }
+  .scroll-showcase .splide-alt {
+    display: block !important;
+  }
+  .scroll-showcase .splide-alt img {
+    width: 250px;
+  }
 }
 
-
-@media (max-width:576px){
-    .landing-text{
-        flex : 1;
-    }
-    .landing-image img{
-        width: 220px;
-    }
-    .feature-item{
-        display: none;
-    }
-    .feature-alt {
-        display: block;
-    }
+@media (max-width: 768px) {
+  .landing-text {
+    flex: 1;
+  }
+  .landing-image {
+    align-items: flex-start;
+  }
+  .cta .para1 {
+    width: 75%;
+  }
+  .landing-image img {
+    width: 240px;
+  }
+  .feature-item p {
+    display: none;
+  }
+  .scroll-showcase .splide-alt img {
+    width: 220px;
+  }
+  .splide-alt .showcase-1,
+  .splide-alt .showcase-3 {
+    flex-direction: column !important;
+  }
+  .splide-alt .showcase-2 {
+    flex-direction: column-reverse !important;
+  }
+  .showcase-img {
+    width: 90%;
+  }
 }
 
-  
-  
+@media (max-width: 576px) {
+  .landing-text {
+    flex: 1;
+  }
+  .landing-image img {
+    width: 220px;
+  }
+  .feature-item {
+    display: none;
+  }
+  .feature-alt {
+    display: block;
+  }
+}
+
+@media (max-width: 770px) {
+  #webFeatures {
+    flex-direction: row !important;
+    justify-content: center;
+    width:100%;
+    text-align: center;
+  }
+  #webFeatures>div{
+    width:50%;
+  }
+  #webFeaturesMain{
+    margin-top:10%;
+    flex-direction: column !important;
+    width:100%;
+  }
+  #webFeaturesMain>div{
+    width:100% !important;
+    margin-top:0;
+  }
+}
+
+
+/* Web Panel Page */
+#webEl{
+  position: absolute;
+  top:15%;
+  left:15%;
+  height: 30px;
+  width:20%;
+  display: block;
+  background-color: #11998e;
+}
+
+#webEl2{
+  position: absolute;
+  top:70%;
+  right:10%;
+  height: 50px;
+  width:20%;
+  display: block;
+  background-color:#35e77f;
+}
+
+@media(max-width:740px){
+  #webEl{
+    display:none;
+  }
+}
