--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -324,7 +324,7 @@ body {
   .landing-image img {
     width: 220px;
   }
-  .feature-item {
+  .feature-item p{
     display: none;
   }
   .feature-alt {
@@ -336,47 +336,53 @@ body {
   #webFeatures {
     flex-direction: row !important;
     justify-content: center;
-    width:100%;
+    width: 100%;
     text-align: center;
   }
-  #webFeatures>div{
-    width:50%;
+  #webFeatures > div {
+    width: 50%;
   }
-  #webFeaturesMain{
-    margin-top:10%;
+  #webFeaturesMain {
+    margin-top: 10%;
     flex-direction: column !important;
-    width:100%;
+    width: 100%;
   }
-  #webFeaturesMain>div{
-    width:100% !important;
-    margin-top:0;
+  #webFeaturesMain > div {
+    width: 100% !important;
+    margin-top: 0;
   }
 }
 
-
 /* Web Panel Page */
-#webEl{
+#webEl {
   position: absolute;
-  top:15%;
-  left:15%;
+  top: 15%;
+  left: 15%;
   height: 30px;
-  width:20%;
+  width: 20%;
   display: block;
   background-color: #11998e;
 }
 
-#webEl2{
+#webEl2 {
   position: absolute;
-  top:70%;
-  right:10%;
+  top: 70%;
+  right: 10%;
   height: 50px;
-  width:20%;
+  width: 20%;
   display: block;
-  background-color:#35e77f;
+  background-color: #35e77f;
 }
 
-@media(max-width:740px){
-  #webEl, #webEl2{
-    display:none;
+@media (max-width: 740px) {
+  #webEl,
+  #webEl2 {
+    display: none;
+  }
+}
+
+@media (max-width: 740px) {
+  #webLandingScreen {
+    width:75% !important;
   }
 }
