--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -307,6 +307,7 @@ body {
   }
   .webFeaturesHead{
     display: block;
+    font-size:20px;
   }
   .scroll-showcase .splide-alt img {
     width: 220px;
@@ -320,6 +321,17 @@ body {
   }
   .showcase-img {
     width: 90%;
+  }
+}
+
+@media(max-width:530px){
+  #AppLandingCTA{
+    flex-direction: column;
+    justify-content: start !important;
+    align-items:flex-start !important;
+  }
+  #AppLandingCTA>*{
+    margin-top:10px;
   }
 }
 
@@ -343,13 +355,13 @@ body {
 
 @media (max-width: 770px) {
   #webFeatures {
-    flex-direction: row !important;
+    flex-direction: column !important;
     justify-content: center;
     width: 100%;
     text-align: center;
   }
   #webFeatures > div {
-    width: 50%;
+    width: 100%;
   }
   #webFeaturesMain {
     margin-top: 10%;
